--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <p class="calc">Калькулятор расчета стоимости
         неоновой вывески</p>
     <form id="neonForm">
-        <label for="baseType">Choose base type:</label>
-        <select id="baseType" name="baseType">
-            <option value="transparent">Transparent base</option>
-            <option value="colored">Colored base</option>
-        </select>
+        <label for="baseType">Выберите тип основания (подложки):</label>
+        <div class="radio-buttons">
+            <label class="label">
+                <input class="radio" type="radio" name="baseType" value="transparent">
+                Прозрачное основание
+            </label>
+            <label class="label">
+                <input class="radio" type="radio" name="baseType" value="colored">
+                Цветное основание
+            </label>
+        </div>
 
         <div class="gen">
             <div class="first">
