--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <form id="neonForm">
         <label class="choose" for="baseType">Выберите тип основания (подложки):</label>
         <div class="radio-buttons">
-            <label class="label">
-                <input class="radio" type="radio" name="baseType" value="transparent">
+            <label class="label" for="transparent">
+                <input class="radio" type="radio" name="baseType" value="transparent" id="transparent">
                 Прозрачное основание
             </label>
-            <label class="label">
-                <input class="radio" type="radio" name="baseType" value="colored">
+            <label class="label" for="colored">
+                <input class="radio" type="radio" name="baseType" value="colored" id="colored">
                 Цветное основание
             </label>
         </div>
+        
 
         <div class="gen">
             <div class="first">
