--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <form id="neonForm">
         <label class="choose" for="baseType">Выберите тип основания (подложки):</label>
         <div class="radio-buttons">
-            <label class="label" for="transparent">
-                <input class="radio" type="radio" name="baseType" value="transparent" id="transparent">
-                Прозрачное основание
-            </label>
-            <label class="label" for="colored">
-                <input class="radio" type="radio" name="baseType" value="colored" id="colored">
-                Цветное основание
-            </label>
+            <div class="rb">
+                <label class="label" for="transparent">
+                    <input class="radio" type="radio" name="baseType" value="transparent" id="transparent">
+                </label>
+                <p class="pp">Прозрачное основание</p>
+            </div>
+            
+            <div class="rb">
+                <label class="label" for="colored">
+                    <input class="radio" type="radio" name="baseType" value="colored" id="colored">
+                </label>
+                <p class="pp">Цветное основание</p>
+            </div>
         </div>
 
         <div class="gen">
