--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
                 
                 <label class="dd" for="baseWidth">Ширина основания неоновой вывески в см.</label>
                 <input type="range" min="0" max="300" value="0" id="baseWidth" name="baseWidth">
-                <span id="baseWidthValue">50 cm</span>
+                <span id="baseWidthValue">0</span>
 
                 <label class="dd" for="neonLength">Примерная длина гибкого неона в метрах</label>
                 <input type="range" min="0" max="50" value="0" id="neonLength" name="neonLength">
-                <span id="neonLengthValue">25 meters</span>
+                <span id="neonLengthValue">0</span>
             </div>
 
             <div class="second">
                 <label class="dd" for="baseHeight">Высота основания неоновой вывески в см.</label>
                 <input type="range" min="0" max="200" value="0" id="baseHeight" name="baseHeight">
-                <span id="baseHeightValue">100 cm</span>
+                <span id="baseHeightValue">0</span>
 
                 <label class="dd" for="elementCount">Примерное количество отдельных элементов из гибкого неона</label>
                 <input type="range" min="0" max="150" value="0" id="elementCount" name="elementCount">
-                <span id="elementCountValue">75</span>
+                <span id="elementCountValue">0</span>
             </div>
         </div>
         <div class="end">
